Other simplifications to tests